crates/bevy_ecs/compile_fail/tests/ui/query_iter_combinations_mut_iterator_safety.stderr
error[E0277]: the trait bound `&mut A: ReadOnlyQueryData` is not satisfied
  --> tests/ui/query_iter_combinations_mut_iterator_safety.rs:9:17
   |
9  |     is_iterator(iter)
   |     ----------- ^^^^ the trait `ReadOnlyQueryData` is not implemented for `&mut A`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `ReadOnlyQueryData`:
             &Archetype
             &T
             ()
             (F,)
             (F0, F1)
             (F0, F1, F2)
             (F0, F1, F2, F3)
             (F0, F1, F2, F3, F4)
           and 36 others
   = note: `ReadOnlyQueryData` is implemented for `&A`, but not for `&mut A`
   = note: required for `QueryCombinationIter<'_, '_, &mut A, (), _>` to implement `Iterator`
note: required by a bound in `is_iterator`
  --> tests/ui/query_iter_combinations_mut_iterator_safety.rs:13:19
   |
13 | fn is_iterator<T: Iterator>(_iter: T) {}
   |                   ^^^^^^^^ required by this bound in `is_iterator`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
